--- a/team.html
+++ b/team.html
@@ -66,4 +66,8 @@
                 grid-template-columns: 1fr;
             }
         }
-    
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Team Member</h1>
