feat : Member 블록 추가

--- a/team.html
+++ b/team.html
@@ -71,3 +71,30 @@
 <body>
     <header>
         <h1>Team Member</h1>
+    </header>
+    <div class="container">
+        <section class="team">
+            <div class="member">
+                <h2>권영우</h2>
+                <p>Main Page</p>
+                <img src="" alt="Main Page Image">
+            </div>
+            <div class="member">
+                <h2>이동현</h2>
+                <p>Image Page</p>
+                <img src="" alt="Image Page Image">
+            </div>
+            <div class="member">
+                <h2>정해린</h2>
+                <p>Information Page</p>
+                <img src="information_page.jpg" alt="Information Page Image">
+            </div>
+            <div class="member">
+                <h2>정성윤</h2>
+                <p>Member Page</p>
+                <img src="member_page.jpg" alt="Member Page Image">
+            </div>
+        </section>
+    </div>
+</body>
+</html>
