feat : image_page, main_page 이미지를 멤버블록에 추가.

--- a/team.html
+++ b/team.html
@@ -77,12 +77,12 @@
             <div class="member">
                 <h2>권영우</h2>
                 <p>Main Page</p>
-                <img src="" alt="Main Page Image">
+                <img src="main_page.png" alt="Main Page Image">
             </div>
             <div class="member">
                 <h2>이동현</h2>
                 <p>Image Page</p>
-                <img src="" alt="Image Page Image">
+                <img src="image_page.png" alt="Image Page Image">
             </div>
             <div class="member">
                 <h2>정해린</h2>
