docs : 팀원정보 키워드 수정

--- a/team.html
+++ b/team.html
@@ -128,7 +128,7 @@
                     name: "이동현",
                     major: "전공: 컴퓨터 공학",
                     studentId: "학번: 2017101234",
-                    task: "업무: 백엔드 개발",
+                    task: "업무: Image_Page",
                     github: "Github: github.com/dong",
                     image: "member1.jpg",
                     pageImage: "page1.jpg",
@@ -138,7 +138,7 @@
                     name: "권영우",
                     major: "전공: 소프트웨어 공학",
                     studentId: "학번: 2017105678",
-                    task: "업무: 프론트엔드 개발",
+                    task: "업무: Main_Page",
                     github: "Github: github.com/kwon",
                     image: "member2.jpg",
                     pageImage: "page2.jpg",
@@ -148,7 +148,7 @@
                     name: "정해린",
                     major: "전공: 데이터 사이언스",
                     studentId: "학번: 2017201234",
-                    task: "업무: 데이터 분석",
+                    task: "업무: Information_Page",
                     github: "Github: github.com/jung",
                     image: "member3.jpg",
                     pageImage: "page3.jpg",
@@ -156,10 +156,10 @@
                 },
                 sung: {
                     name: "정성윤",
-                    major: "전공: 인공지능",
-                    studentId: "학번: 2017205678",
-                    task: "업무: 머신러닝 엔지니어",
-                    github: "Github: github.com/sung",
+                    major: "전공: 데이터사이언스학과",
+                    studentId: "학번: 18011732",
+                    task: "업무: Information_Page",
+                    github: "Github: https://github.com/sung3504",
                     image: "member4.jpg",
                     pageImage: "page4.jpg",
                     pageLink: "https://example.com/page4"
@@ -219,7 +219,7 @@
             <img src="home-logo.png" alt="Home"> HOME
         </a>
         <a href="https://example.com/api">
-            <img src="api-logo.png" alt="API"> API
+            <img src="api-logo.png" alt="API">
         </a>
         <a href="https://github.com/team">
             <img src="github-logo.png" alt="Team Github"> Team Github
